--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "catwiki",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://zuiersadien.github.io/cat-wiki",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
@@ -21,9 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
+ 
   },
   "eslintConfig": {
     "extends": [
